# c-vips-openslide

./: .gitignore  Makefile  README.md  launch.json  meson.build  meson_options.txt  requests.csv  tmp
src/: constants.h  csv.h  main.c  meson.build  ops.c  ops.h  resize.c  resize.h  slide.c  slide.h  types.h
src/resize/: copy.c  except.h  imaging.h  platform.h  resample.h  storage.c  utils.h
test/: create_requests_csv.py  dlup_tiles.py  test-read-region-request.c  test_slide.c
tests/: debug_read_region.py
